# jarvis

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.sh  commands.yaml  models.yaml  pyproject.toml  requirements.txt  schedule.yaml  settings.yaml
jarvis/: __init__.py  alarms.py  audio_env.py  brain.py  breaks.py  bus.py  casual.py  chains.py  cli.py  config.py  contracts.py  doctor.py  downloader.py  lamp.py  live.py  matcher.py  notify.py  phrases.py  reminders.py  resilience.py  services_map.py  silence.py  speech.py  sysinfo.py  system.py  timers.py  tts_cache.py  tts_dsp.py  tts_engine.py  tts_prerender.py  ui.py  voice_volume.py  weather.py  weather_query.py  worldtime.py
jarvis/services/: __init__.py  activity_monitor.py  core.py  lamp.py  os_agent.py  phone.py  scheduler.py  stt.py  tts.py
systemd/: jarvis-core.service  jarvis-os-agent.service  jarvis-perf.service  jarvis-stt.service  jarvis-tts.service
tools/: apply_phrase_rewrites.py  bench_asr.py  bench_matcher.py  perf_mode.sh  quantize_embedder.py  sim_breaks.py  voice_match.py  voice_studio.py
